0.11
	+ Difference easily internal/external interfaces through GUI
0.10.99
	+ Use last model/view changes to get rid of the multitable code
	+ Remove rules using an object when it's removed
	+ Use services module
	+ Adding a rule using an object with no members is now not
	possible
	+ Now rules are applied in PREROUTING chain to avoid NAT
	+ Now traffic shaping rules are aware about gateway changes
	+ Use composite with a 'select' layout instead of old tailored
	version. This includes some refurbishing and enhancing on
	notifying changes on Network module regarding to traffic shaping
	rules
0.9.100
	+ New release
0.9.99
    + New release
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ Added support for  shaping on internal and external interfaces
	+ Added support to prioritise traffic (from 0 to 7)
	+ More fine-grained rules to mark traffic
0.9
	+ Added Polish translation
	+ Initial release